Simple hamburger menu backend
+ Added simple hamburger menu globally that can be expanded upon later. And only need to add some simple line to the HTML to make it show up.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,21 @@
-<ion-nav [root]="rootPage"></ion-nav>
+<!-- <ion-nav [root]="rootPage"></ion-nav> -->
+<ion-menu [content]="content">
+        <ion-header>
+          <ion-toolbar>
+            <ion-title>Menu</ion-title>
+          </ion-toolbar>
+        </ion-header>
+        <ion-content>
+          <ion-list>
+            <button menuClose ion-item *ngFor="let page of pages" (click)="openPage(page)">
+              {{page.title}}
+            </button>
+            <!-- Static button for closing the menu, outside of the array so it always end up at the end after the array no matter how many items -->
+            <button ion-item menuClose>
+                Close Menu
+            </button>
+          </ion-list>
+        </ion-content>
+      </ion-menu>      
+      
+<ion-nav #content [root]="rootPage"></ion-nav>
